--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="./ai.png" />
     <link rel="manifest" href="./ai.png" />
 
-    <title>Robot</title>
+    <title>Metaverse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
